Adding most maledictions and most benedictions

--- a/index.html
+++ b/index.html
@@ -17,5 +17,9 @@
     <div id="hand"></div>
     <div id="bonus"></div>
     <div id="instruction"></div>
+    <div id="malediction">
+      <div id="malediction-card"></div>
+      <button id="play-malediction">OK</button>
+    </div>
   </body>
 </html>
