--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+    <div id="game"></div>
+    <div id="instruction"></div>
+    <div id="card-left">Remaining: <span></span></div>
     <div id="goodEnd">Congratulation</div>
     <div id="badEnd">Game Over<button id="replay">Replay</button></div>
-    <div id="pile"></div>
-    <div id="picked-card"></div>
-    <div id="discard"></div>
-    <div id="hand"></div>
-    <div id="bonus"></div>
-    <div id="instruction"></div>
-    <div id="malediction">
-      <div id="malediction-card"></div>
-      <button id="play-malediction">OK</button>
+    <div id="malediction"><button id="play-malediction">OK</button></div>
+    <div class="benection-hand">
+      <div class="spot"></div>
+      <div class="spot"></div>
+      <div class="spot"></div>
     </div>
   </body>
 </html>
