--- a/index.html
+++ b/index.html
@@ -9,16 +9,29 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <div id="game"></div>
-    <div id="instruction"></div>
-    <div id="card-left">Remaining: <span></span></div>
-    <div id="goodEnd">Congratulation</div>
-    <div id="badEnd">Game Over<button id="replay">Replay</button></div>
-    <div id="malediction"><button id="play-malediction">OK</button></div>
-    <div class="benection-hand">
-      <div class="spot"></div>
-      <div class="spot"></div>
-      <div class="spot"></div>
+    <div id="menu">
+      <h1>The card game</h1>
+      <p>
+        4 set of 1-7 treasure cards<br />
+        8 maledictions cards<br />
+        7 benedictions cards type<br />
+        Try to finish the pile of cards without your hand total points ever reaching 13 points<br />
+        Good Luck<br />
+      </p>
+      <button id="play">Play</button>
+    </div>
+    <div id="game">
+      <div id="board"></div>
+      <div id="instruction"></div>
+      <div id="card-left">Remaining: <span></span></div>
+      <div id="goodEnd">Congratulation</div>
+      <div id="badEnd">Game Over<button id="replay">Replay</button></div>
+      <div id="malediction"><button id="play-malediction">OK</button></div>
+      <div class="benection-hand">
+        <div class="spot"></div>
+        <div class="spot"></div>
+        <div class="spot"></div>
+      </div>
     </div>
   </body>
 </html>
