Adding animations / debugging / add benediction auto-draw / no 2 same benediction

--- a/index.html
+++ b/index.html
@@ -23,15 +23,10 @@
     <div id="game">
       <div id="board"></div>
       <div id="instruction"></div>
-      <div id="card-left">Remaining: <span></span></div>
+      <div id="card-remaining">Remaining: <span></span></div>
       <div id="goodEnd">Congratulation</div>
       <div id="badEnd">Game Over<button id="replay">Replay</button></div>
       <div id="malediction"><button id="play-malediction">OK</button></div>
-      <div class="benection-hand">
-        <div class="spot"></div>
-        <div class="spot"></div>
-        <div class="spot"></div>
-      </div>
     </div>
   </body>
 </html>
