Tweaking the balance of the game (weight, nb benediction, cancel malediction)

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <p>
         4 set of 1-7 treasure cards<br />
         7 maledictions cards<br />
-        6 benedictions cards type<br />
-        Try to finish the pile of cards without your hand total points ever reaching 13 points<br />
+        6 type of benedictions cards<br /><br />
+        Try to finish the pile of cards without your hand total points ever reaching 13 points or above<br /><br />
         Good Luck<br />
       </p>
       <button id="play">Play</button>
@@ -24,9 +24,9 @@
       <div id="board"></div>
       <div id="instruction"></div>
       <div id="card-remaining">Remaining: <span></span></div>
-      <div id="goodEnd">Congratulation</div>
+      <div id="goodEnd">Congratulations</div>
       <div id="badEnd">Game Over<button id="replay">Replay</button></div>
-      <div id="malediction"><button id="play-malediction">OK</button></div>
+      <div id="malediction"><button id="play-malediction">Accept your faith</button></div>
     </div>
   </body>
 </html>
