--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+    <!-- <div id="ghost"></div>
+    <div id="death"></div> -->
     <div id="menu">
       <h1>The card game</h1>
       <p>
