Adding some early game cinematics

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <!-- <div id="ghost"></div>
-    <div id="death"></div> -->
+    <div id="scene">
+      <label id="scene-label"></label>
+      <div id="floor"></div>
+      <div id="death"></div>
+      <div id="ghost"></div>
+    </div>
     <div id="menu">
       <h1>The card game</h1>
       <p>
