reworking the dialogs placement

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     <div id="scene">
-      <label id="scene-label"></label>
+      <label id="label1"></label>
+      <label id="label2"></label>
       <div id="floor"></div>
       <div id="death"></div>
       <div id="ghost"></div>
