--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div id="scene">
+      <span id="skip">Press space to skip</span>
       <label id="label1"></label>
       <label id="label2"></label>
       <div id="floor"></div>
