--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Card game</title>
+    <title>A deadly bet</title>
     <script type="module" src="/src/index.ts"></script>
     <link rel="stylesheet" href="./styles.css" />
   </head>
@@ -18,15 +17,9 @@
       <div id="ghost"></div>
     </div>
     <div id="menu">
-      <h1>The card game</h1>
-      <p>
-        4 set of 1-7 treasure cards<br />
-        7 maledictions cards<br />
-        9 type of benedictions cards<br /><br />
-        Try to finish the pile of cards without your hand total points ever reaching 13 points or above<br /><br />
-        Good Luck<br />
-      </p>
-      <button id="play">Play</button>
+      <h1>A deadly bet</h1>
+      <h3>A game by Corentin Pillet</h3>
+      <button id="button">Start</button>
     </div>
     <div id="game">
       <div id="board"></div>
