Adding a mute system and fixing a mistake

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+    <button id="mute"></button>
     <div id="scene">
       <span id="skip">Press space to skip</span>
       <label id="label1"></label>
@@ -19,7 +20,7 @@
     <div id="menu">
       <h1>A deadly bet</h1>
       <h3>A game by Corentin Pillet</h3>
-      <button id="button">Start</button>
+      <button id="start-button">Start</button>
     </div>
     <div id="game">
       <div id="board"></div>
