Adding instructions back

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <button id="mute"></button>
     <div id="scene">
       <span id="skip">Press space to skip</span>
-      <label id="label1"></label>
-      <label id="label2"></label>
+      <label class="text-label bl" id="label2"></label>
       <div id="floor"></div>
       <div id="ghost"></div>
     </div>
+    <label class="text-label" id="label1"></label>
     <div id="death"></div>
     <div id="menu">
       <h1>A deadly bet</h1>
