--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
       <div id="goodEnd">
         <h1>You get to live another day!</h>
         <h3>For now</h3>
+        <button class="replay">Play again</button>
       </div>
       <div id="badEnd">
         <h1>You died!</h>
         <h3>For real this time</h3>
-        <button id="replay">Try again</button>
+        <button class="replay">Try again</button>
       </div>
       <div id="malediction"><button id="play-malediction">Accept your faith</button></div>
     </div>
