--- a/index.html
+++ b/index.html
@@ -15,25 +15,15 @@
     <div id="ghost"></div>
     <label class="text-label" id="label1"></label>
     <div id="death"></div>
-    <div id="menu">
+    <div id="popup">
       <h1>A deadly bet</h1>
       <h3>A game by Corentin Pillet</h3>
-      <button id="start-button">Start</button>
+      <button id="button">Start</button>
     </div>
     <div id="game">
       <div id="board"></div>
       <div id="instruction"></div>
       <div id="card-remaining">Remaining: <span></span></div>
-      <div id="goodEnd">
-        <h1>You get to live another day!</h>
-        <h3>For now</h3>
-        <button class="replay">Play again</button>
-      </div>
-      <div id="badEnd">
-        <h1>You died!</h>
-        <h3>For real this time</h3>
-        <button class="replay">Try again</button>
-      </div>
       <div id="malediction"><button id="play-malediction">Accept your faith</button></div>
     </div>
   </body>
