Changing the gameplay logic for a credit base system

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
     <div id="game">
       <div id="board"></div>
       <div id="instruction"></div>
+      <div id="credits">
+        <div id="c0"></div>
+        <div id="c1"></div>
+        <div id="c2"></div>
+        <div id="c3"></div>
+        <div id="c4"></div>
+      </div>
       <div id="card-remaining">Remaining: <span></span></div>
       <div id="malediction"><button id="play-malediction">Accept your faith</button></div>
     </div>
