--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <button id="mute"></button>
+    <div id="sidebar">
+      <button id="mute"></button>
+      <div id="gradient"><div id="index"></div></div>
+    </div>
     <span id="skip">Press space to skip</span>
     <label class="text-label" id="label2"></label>
     <div id="floor"></div>
