Fixing malediction cancelation and soft lock issue

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <h1>A deadly bet</h1>
       <h3>A game by Corentin Pillet</h3>
       <button id="button">Start</button>
+      <label>Enhanced for landscape</label>
     </div>
     <div id="game">
       <div id="board"></div>
