--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <label class="text-label" id="label1"></label>
     <div id="death"></div>
     <div id="popup">
-      <h1>A deadly bet</h1>
+      <h1>A <span>deadly</span> bet</h1>
       <h3>A game by Corentin Pillet</h3>
       <button id="button">Start</button>
       <label>Enhanced for landscape</label>
